# averaging_quaternion

./: CMakeLists.txt  README.md  package.xml
config/: display_frames.rviz
launch/: averaging_quaternion.launch
scripts/: graph_plot.py
src/: averaging_quaternion.cpp  graph_plot.py  tf_broadcaster.cpp
